--- a/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_en_US.properties
+++ b/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_en_US.properties
@@ -41,3 +41,13 @@ PHOTO = Photo
 ID = DNI
 PHONE = Phone
 ACCOUNT = Account
+
+Menumanagerprofiles = Manager profiles
+Managerprofiles = Manager profiles
+formprofiles = Profiles
+PROFILE = Profile
+XMLCLIENT = Permissions client (XMLCLIENT)
+XMLSERVER = Permissions server (XMLSERVER)
+USER_ = User
+
+
