--- a/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_en_US.properties
+++ b/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_en_US.properties
@@ -68,3 +68,4 @@ CUSTOMERID = Customer
 DESCRIPTION = Description
 Client = Client
 AccountsYear = Accounts (per year)
+negativeBalance = Negative balance
