--- a/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_es_ES.properties
+++ b/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_es_ES.properties
@@ -68,3 +68,4 @@ CUSTOMERID = Cliente
 DESCRIPTION = Descripción
 Client = Cliente
 AccountsYear = Cuentas (por año)
+negativeBalance = Saldo negativo
