--- a/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_en_US.properties
+++ b/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_en_US.properties
@@ -69,3 +69,6 @@ DESCRIPTION = Description
 Client = Client
 AccountsYear = Accounts (per year)
 negativeBalance = Negative balance
+M_ACOUNTS_EXIST= This customer has an active account
+updateType = Update type
+duplicateRecord = Duplicate record
