--- a/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_es_ES.properties
+++ b/bank-manager-client/src/main/resources/org/bank/manager/client/i18n/bundle_es_ES.properties
@@ -69,3 +69,6 @@ DESCRIPTION = Descripción
 Client = Cliente
 AccountsYear = Cuentas (por año)
 negativeBalance = Saldo negativo
+M_ACOUNTS_EXIST= Este cliente tiene una cuenta activa
+updateType = Actualizar tipo
+duplicateRecord = Duplicar registro
